fixed some spacing in financial section and added press release section to investor-relations.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,6 +455,11 @@ footer {
     color: #e0e0e0;
 }
 
+.press-release-section h1{
+    font-family: 'Playfair Display', serif;
+    color: #e0e0e0;
+}
+
 /* Headings */
 
 .section-heading {
